--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: maricard <maricard@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/28 08:21:41 by maricard          #+#    #+#              #
-#    Updated: 2022/11/28 08:29:35 by maricard         ###   ########.fr        #
+#    Updated: 2022/11/28 16:51:30 by maricard         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,3 +17,24 @@ RM = rm -f
 CC = clang
 
 CFLAGS = -Wall -Werror -Wextra
+
+SRC = ft_printf.c ft_char.c ft_number.c ft_putchar.c ft_string.c \
+ft_strlen.c
+
+SRC-OBJ = $(SRC:.c=.o)
+
+all:		$(NAME)
+		
+$(NAME):	$(SRC-OBJ)	
+			ar rcs $(NAME) $(SRC-OBJ) 
+
+clean:
+			$(RM) $(SRC-OBJ)
+
+fclean:		clean
+			$(RM) $(NAME)
+
+re:			fclean $(NAME)
+
+%.o:		%.c
+			$(CC) -c $(CFLAGS)
