--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: maricard <maricard@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/28 08:21:41 by maricard          #+#    #+#              #
-#    Updated: 2022/11/28 16:51:30 by maricard         ###   ########.fr        #
+#    Updated: 2022/11/29 11:28:37 by maricard         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,9 +19,12 @@ CC = clang
 CFLAGS = -Wall -Werror -Wextra
 
 SRC = ft_printf.c ft_char.c ft_number.c ft_putchar.c ft_string.c \
-ft_strlen.c
+ft_strlen.c ft_hexadecimal_x.c ft_hexadecimal_X.c
 
 SRC-OBJ = $(SRC:.c=.o)
+
+%.o:		%.c
+			$(CC) -c $(CFLAGS)
 
 all:		$(NAME)
 		
@@ -36,5 +39,3 @@ fclean:		clean
 
 re:			fclean $(NAME)
 
-%.o:		%.c
-			$(CC) -c $(CFLAGS)
