--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: maricard <maricard@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/28 08:21:41 by maricard          #+#    #+#              #
-#    Updated: 2022/11/29 11:28:37 by maricard         ###   ########.fr        #
+#    Updated: 2022/11/29 11:53:38 by maricard         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,7 @@ ft_strlen.c ft_hexadecimal_x.c ft_hexadecimal_X.c
 SRC-OBJ = $(SRC:.c=.o)
 
 %.o:		%.c
-			$(CC) -c $(CFLAGS)
+			$(CC) -c $(CFLAGS) $^
 
 all:		$(NAME)
 		
