--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: maricard <maricard@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/28 08:21:41 by maricard          #+#    #+#              #
-#    Updated: 2022/11/29 11:53:38 by maricard         ###   ########.fr        #
+#    Updated: 2022/11/29 13:11:40 by maricard         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,8 @@ CC = clang
 CFLAGS = -Wall -Werror -Wextra
 
 SRC = ft_printf.c ft_char.c ft_number.c ft_putchar.c ft_string.c \
-ft_strlen.c ft_hexadecimal_x.c ft_hexadecimal_X.c
+ft_strlen.c ft_hexadecimal_x.c ft_hexadecimal_X.c ft_unsigned.c   \
+
 
 SRC-OBJ = $(SRC:.c=.o)
 
